--- a/app/src/main/res/layout/view_number.xml
+++ b/app/src/main/res/layout/view_number.xml
@@ -13,8 +13,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         customHeight="@{lineNumber.isRow ? @dimen/row_number_height : @dimen/column_number_height}"
         customWidth="@{lineNumber.isRow ? @dimen/row_number_width : @dimen/column_number_with}"
-        android:layout_width="35dp"
-        android:layout_height="75dp"
+        android:layout_width="@dimen/row_number_width"
+        android:layout_height="@dimen/row_number_height"
         android:background="@color/light_background">
 
         <TextView
