--- a/app/src/main/res/layout/view_number.xml
+++ b/app/src/main/res/layout/view_number.xml
@@ -15,7 +15,7 @@
         customWidth="@{lineNumber.isRow ? @dimen/row_number_width : @dimen/column_number_with}"
         android:layout_width="@dimen/row_number_width"
         android:layout_height="@dimen/row_number_height"
-        android:background="@color/light_background">
+        android:background="@color/transparent_light_background">
 
         <TextView
             android:id="@+id/lineNumber_textView"
