--- a/app/src/main/res/layout/fragment_popup_detail.xml
+++ b/app/src/main/res/layout/fragment_popup_detail.xml
@@ -16,9 +16,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_detail"
-        android:layout_width="@dimen/detail_width"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:padding="15dp"
         android:paddingBottom="@dimen/detail_bottom_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,11 +32,12 @@
             android:layout_height="@dimen/detail_image_height"
             android:layout_marginTop="@dimen/detail_image_margin_top"
             android:contentDescription="@string/element_sample"
+            android:src="@{context.getDrawable(element.sampleImage)}"
             app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
             app:layout_constraintEnd_toStartOf="@+id/right_guideline"
             app:layout_constraintStart_toStartOf="@+id/left_guideline"
             app:layout_constraintTop_toBottomOf="@+id/element_symbol_textView"
-            tools:srcCompat="@drawable/ic_launcher_background" />
+            tools:srcCompat="@drawable/sample_2" />
 
         <TextView
             android:id="@+id/element_number_textView"
@@ -49,38 +51,55 @@
             app:layout_constraintBottom_toTopOf="@+id/top_guideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="6" />
+            tools:text="102" />
+
+        <ImageButton
+            android:id="@+id/close_detail_imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:contentDescription="@string/more_detail"
+            android:minWidth="@dimen/button_min_size"
+            android:minHeight="@dimen/button_min_size"
+            android:onClick="@{_ -> myInterface.dismiss()}"
+            android:src="@drawable/ic_close"
+            app:layout_constraintBottom_toTopOf="@+id/top_guideline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageButton
             android:id="@+id/more_detail_imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/button_margin_end"
             android:background="@null"
+            android:layout_marginEnd="@dimen/button_margin_end"
             android:contentDescription="@string/more_detail"
             android:minWidth="@dimen/button_min_size"
             android:minHeight="@dimen/button_min_size"
             android:onClick="@{_ -> myInterface.expandDetail()}"
             android:src="@drawable/ic_info"
             app:layout_constraintBottom_toTopOf="@+id/top_guideline"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/close_detail_imageButton"
+            app:layout_constraintTop_toTopOf="@+id/close_detail_imageButton"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageButton
             android:id="@+id/close_more_detail_imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/button_margin_end"
             android:background="@null"
+            android:layout_marginEnd="@dimen/button_margin_end"
             android:contentDescription="@string/close_expanded_detail"
             android:minWidth="@dimen/button_min_size"
             android:minHeight="@dimen/button_min_size"
             android:onClick="@{_ -> myInterface.expandDetail()}"
-            android:src="@drawable/ic_close"
+            android:src="@drawable/ic_extend_back"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/top_guideline"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/close_detail_imageButton"
+            app:layout_constraintTop_toTopOf="@+id/close_detail_imageButton"
+            app:layout_constraintVertical_bias="1.0" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/top_guideline"
@@ -114,7 +133,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/electron_textView"
             app:layout_constraintStart_toStartOf="@+id/left_guideline"
             app:layout_constraintTop_toTopOf="@+id/top_guideline"
-            tools:text="C" />
+            tools:text="Cc" />
 
         <TextView
             android:id="@+id/element_title_textView"
@@ -184,7 +203,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:constraint_referenced_ids=",boiling_point_textView,electronegativity_value_textView,density_textView,boiling_point_value_textView,melting_point_value_textView,year_discovered_textView,year_discovered_value_textView,electronegativity_textView,melting_point_textView,atomic_radius_textView,ionization_energy_textView,density_value_textView,ionization_energy_value_textView,atomic_radius_value_textView,standard_state_value_textView,electron_affinity_textView,electron_affinity_value_textView,standard_state_textView" />
+            app:constraint_referenced_ids=",boiling_point_textView,electronegativity_value_textView,density_textView,boiling_point_value_textView,melting_point_value_textView,electronegativity_textView,melting_point_textView,atomic_radius_textView,ionization_energy_textView,density_value_textView,ionization_energy_value_textView,atomic_radius_value_textView,standard_state_value_textView,electron_affinity_textView,electron_affinity_value_textView,standard_state_textView" />
 
         <TextView
             android:id="@+id/standard_state_textView"
@@ -331,24 +350,6 @@
             app:layout_constraintBaseline_toBaselineOf="@+id/density_textView"
             app:layout_constraintStart_toStartOf="@+id/center_guideline"
             tools:text="20.8 g/cm³" />
-
-        <TextView
-            android:id="@+id/year_discovered_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_expanded_value_margin_top"
-            android:text="@string/year_discovered"
-            app:layout_constraintStart_toStartOf="@+id/left_guideline"
-            app:layout_constraintTop_toBottomOf="@+id/density_textView" />
-
-        <TextView
-            android:id="@+id/year_discovered_value_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{element.yearDiscovered}"
-            app:layout_constraintBaseline_toBaselineOf="@+id/year_discovered_textView"
-            app:layout_constraintStart_toStartOf="@+id/center_guideline"
-            tools:text="1942" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/bottom_guideline"
