--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Periodic_Table_of_Mendeleev" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Periodic_Table_of_Mendeleev" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_background</item>
         <item name="colorPrimaryVariant">@color/black_background</item>
