--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="transparent_light_background">#45393D48</color>
+    <color name="transparent_background">#00FFFFFF</color>
 
     <color name="black_background">#121212</color>
     <color name="light_background">#393D48</color>
