--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,11 @@
 
         <FrameLayout
             android:id="@+id/main_frameLayout"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/recycler_height"
+            android:layout_width="@dimen/match_constraint"
+            android:layout_height="@dimen/match_constraint"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
