--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,6 +4,7 @@
     <dimen name="splash_layout_size">250dp</dimen>
 
     <dimen name="table_recyclerview_width">0dp</dimen>
+    <dimen name="match_constraint">0dp</dimen>
 
     <dimen name="row_number_width">30dp</dimen>
     <dimen name="row_number_height">70dp</dimen>
@@ -18,8 +19,6 @@
     <dimen name="detail_image_height">0dp</dimen>
 
     <dimen name="button_min_size">48dp</dimen>
-
-    <dimen name="recycler_height">0dp</dimen>
 
     <!--Text Size Dimen-->
     <dimen name="number_size">18sp</dimen>
