--- a/app/src/main/res/layout/view_index_number.xml
+++ b/app/src/main/res/layout/view_index_number.xml
@@ -12,8 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent_background">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/lineNumber_textView"
